# Calibration-and-AR

./: .gitignore  CMakeLists.txt  README.md
include/: AppController.hpp  Calibrator.hpp  Renderer.hpp  TargetDetector.hpp  config.hpp
src/: AppController.cpp  Calibrator.cpp  Renderer.cpp  TargetDetector.cpp  feature_test.cpp  generate_board.cpp  main.cpp
